[gd_scene load_steps=16 format=3 uid="uid://cleqatf1rk0lp"]

[ext_resource type="Script" uid="uid://biq8qynv83bry" path="res://ui/selectable_card.gd" id="1_8jx8r"]
[ext_resource type="Texture2D" uid="uid://dedu1aqgaewfb" path="res://assets/sprites/cards/character_card.png" id="2_0td3g"]
[ext_resource type="FontFile" uid="uid://clsxpqfmryyob" path="res://assets/fonts/upheaval/upheavtt.ttf" id="2_hdkuc"]
[ext_resource type="Texture2D" uid="uid://bvle0d1xauewb" path="res://assets/sprites/fishes/rusty.png" id="2_ij1bh"]
[ext_resource type="Texture2D" uid="uid://bg5273i0auuvv" path="res://assets/sprites/fishermans/fisherman_skin.png" id="5_ayki5"]
[ext_resource type="AudioStream" uid="uid://dyyo8ihi3g7mh" path="res://assets/sfx/cart_draw.wav" id="6_ckvk6"]
[ext_resource type="AudioStream" uid="uid://8iod62g25tel" path="res://assets/sfx/playcard.wav" id="7_2dxv0"]

[sub_resource type="LabelSettings" id="LabelSettings_ocdhs"]
font = ExtResource("2_hdkuc")
font_size = 22
font_color = Color(0.212305, 0.212305, 0.212305, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_itjwy"]
resource_local_to_scene = true
atlas = ExtResource("5_ayki5")
region = Rect2(15, 2, 34, 36)

[sub_resource type="Animation" id="Animation_16ct4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Draw:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Play:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j84q7"]
resource_name = "appear"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Draw:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_interactive"
}]
}

[sub_resource type="Animation" id="Animation_0lbga"]
resource_name = "destroy"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_iy80d"]
resource_name = "hover"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.5, 1, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -50)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Play:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ix1vg"]
resource_name = "selected"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.5, 0.5, 2),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.5, 0.5), Vector2(1.2, 1.2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"card_selected"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Draw:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vu36m"]
_data = {
&"RESET": SubResource("Animation_16ct4"),
&"appear": SubResource("Animation_j84q7"),
&"destroy": SubResource("Animation_0lbga"),
&"hover": SubResource("Animation_iy80d"),
&"selected": SubResource("Animation_ix1vg")
}

[node name="SelectableCard" type="Control" node_paths=PackedStringArray("card_title", "card_upgrade", "card_character", "card_description", "anim", "background")]
custom_minimum_size = Vector2(232, 320)
layout_mode = 3
anchors_preset = 0
offset_right = 232.0
offset_bottom = 320.0
pivot_offset = Vector2(116, 160)
script = ExtResource("1_8jx8r")
card_title = NodePath("Background/MarginContainer/Control/VBoxContainer/Title")
card_upgrade = NodePath("Background/MarginContainer/Control/VBoxContainer/Upgrade")
card_character = NodePath("Background/MarginContainer/Control/VBoxContainer/Character")
card_description = NodePath("Background/MarginContainer/Control/VBoxContainer/Description")
anim = NodePath("Anim")
background = NodePath("Background")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0td3g")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Control" type="Control" parent="Background/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Title" type="Label" parent="Background/MarginContainer/Control/VBoxContainer"]
texture_filter = 2
layout_mode = 2
text = "CARD NAME"
label_settings = SubResource("LabelSettings_ocdhs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrade" type="TextureRect" parent="Background/MarginContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4
mouse_filter = 2
texture = ExtResource("2_ij1bh")
expand_mode = 1
stretch_mode = 5

[node name="Character" type="TextureRect" parent="Background/MarginContainer/Control/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4
mouse_filter = 2
texture = SubResource("AtlasTexture_itjwy")
expand_mode = 1
stretch_mode = 5

[node name="Description" type="RichTextLabel" parent="Background/MarginContainer/Control/VBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2
theme_override_colors/default_color = Color(0.211765, 0.211765, 0.211765, 1)
theme_override_fonts/normal_font = ExtResource("2_hdkuc")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Card text"
fit_content = true
scroll_active = false

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vu36m")
}

[node name="Draw" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ckvk6")
bus = &"SFx"

[node name="Play" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2dxv0")
bus = &"SFx"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
